--- a/assets/occa.css
+++ b/assets/occa.css
@@ -315,7 +315,6 @@ code .token.annotation {
     text-align: center;
 }
 
-
 .member .profile dt i.fa-map-marker {
     font-size: 1.15em;
 }
@@ -338,6 +337,41 @@ code .token.annotation {
 
 .team-header-gap {
     height: 20px;
+}
+/*====================================*/
+
+
+/*---[ Gallery ]----------------------*/
+.gallery-entry {
+    display: flex;
+    margin-top: 3em;
+}
+
+.gallery-entry .image {
+    flex: 0 0 100px;
+    height: 100px;
+    border-radius: 1000px;
+    overflow: hidden;
+    border: 5px solid white;
+
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.12);
+}
+
+.gallery-entry .image img {
+    width: 90px;
+    height: 90px;
+}
+
+.gallery-entry .description {
+    padding-left: 26px;
+    padding-top: 1em;
+    flex: 1;
+}
+
+.gallery-entry .description h3 {
+    margin-top: 0;
 }
 /*====================================*/
 
