--- a/assets/occa.css
+++ b/assets/occa.css
@@ -354,9 +354,17 @@ code .token.annotation {
     overflow: hidden;
     border: 5px solid white;
 
-    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),
+    box-shadow:
+    0px 1px 5px 0px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14),
     0px 3px 1px -2px rgba(0, 0, 0, 0.12);
+}
+
+.gallery-entry .image:hover {
+    box-shadow:
+    0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
 .gallery-entry .image img {
